# Django-App-Starter-Template

./: .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  LICENSE  Makefile  README.md  celerybeat-schedule  docker-compose.dev.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
config/: celery.py  middleware.py  urls.py
config/settings/: __init__.py  common.py  utils.py
config/settings/subsettings/: apps.py  auth.py  log.py  static.py  templates.py
dj_app/: apps.py  signals.py  tasks.py
dj_app/admin/: __init__.py  users.py
dj_app/forms/: register.py  user.py
dj_app/management/commands/: makesuperuser.py
dj_app/migrations/: 0001_initial.py
dj_app/models/: __init__.py  user.py
dj_app/services/: settings.py
dj_app/urls/: auth.py  base.py  errors.py
dj_app/views/: auth.py  errors.py
docker/: Dockerfile  compose.yaml
project/: .env
src/: entrypoint.sh  package.json  pyproject.toml  tailwind.config.js
src/config/: celery.py  context_processor.py  urls.py
src/config/settings/: common.py  dev.py  prod.py
src/config/settings/subsettings/: apps.py  auth.py  caches.py  database.py  email.py  log.py  messages.py  middleware.py  static.py
src/starter_app/: apps.py  tasks.py
src/starter_app/admin/: __init__.py  users.py
src/starter_app/forms/: register.py  user.py
src/starter_app/models/: __init__.py  user.py
src/starter_app/services/: settings.py
src/starter_app/urls/: auth.py  base.py  errors.py
src/starter_app/views/: start.py
src/static/css/: output.css
src/templates/: 404.html  landing.html  start.html
src/templates/account/: account_inactive.html  email_confirm.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html
src/templates/account/email/: email_confirmation_message.txt  password_reset_key_message.html
src/templates/account/snippets/: already_logged_in.html
src/templates/components/: banner.html  login.html  menu.html  navbar.html  sidebar.html  signup.html
src/templates/icons/: bullhorn.html  view-dashboard.html
src/templates/partials/: back_to_start.html  login.html  toast.html
src/templates/settings/: change-username.html  delete-account.html  settings.html
static/js/htmx/: htmx_eventlistener.js
templates/: _base-landing.html  _base.html  signup.html
templates/account/: email_change.html  login.html  password_change.html  signup_closed.html  verification_sent.html
templates/account/email/: base_message.txt
templates/account/messages/: password_reset_key_message.txt
templates/components/: banner.html  footer.html  login.html  main.html  menu.html  navbar.html  sidebar-sm.html  signup.html
templates/icons/: logout.html  menu.html
templates/partials/: login.html
templates/settings/: settings.html
